--- a/style/style.css
+++ b/style/style.css
@@ -21,4 +21,16 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: flex;
+}
+
+/* Container styles */
+
+#container {
+    width: 80%;
+    margin: auto;
+    padding: 1.5rem;
+    background-color: rgba(255, 255, 255, 0.14);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
 }
