--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.25s ease-in-out;
 }
 
 body {
@@ -33,4 +34,75 @@ body {
     background-color: rgba(255, 255, 255, 0.14);
     backdrop-filter: blur(10px);
     border-radius: 16px;
+}
+
+/* Search bar style */
+
+.search-bar {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+    border-radius: 8px;
+    height: 40px;
+}
+
+.search-bar input {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 8px 0 0 8px;
+    border: none;
+    outline: none;
+    padding: 0 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+    background-color: rgba(255, 255, 255, 0.45);
+    backdrop-filter: blur(10px);
+    color: black;
+    flex: 1;
+}
+
+.search-bar button {
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    background-color: #B4B3B3;
+    backdrop-filter: blur(10px);
+    cursor: pointer;
+    height: 40px;
+    width: 75px;
+}
+
+.search-bar button:hover {
+    background-color: rgba(255, 255, 255, 0.24);
+}
+
+/* City name style */
+
+h1#city-name {
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 2rem 0 1.5rem 0;
+    text-align: center;
+}
+
+/* Content style */
+
+.meteo-infos {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+}
+
+.meteo-infos img {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    margin-right: 1.5rem;
+}
+
+.meteo-infos p {
+    text-align: justify;
 }
