--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ body {
     width: 80%;
     margin: auto;
     padding: 1.5rem;
-    background-color: rgba(255, 255, 255, 0.14);
+    background-color: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
     border-radius: 16px;
 }
@@ -101,6 +101,7 @@ h1#city-name {
     height: 100px;
     border-radius: 8px;
     margin-right: 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.288) 5px 5px 5px;
 }
 
 .meteo-infos p {
