--- a/style/style.css
+++ b/style/style.css
@@ -2,8 +2,6 @@
 
 /* General styles */
 
-:root {}
-
 * {
     margin: 0;
     padding: 0;
@@ -36,8 +34,13 @@ body {
 
 /* Search bar style */
 
+#search-container {
+    background-color: rgb(246, 246, 246);
+    border-radius: 8px;
+}
+
 .search-bar {
-    background-color: white;
+    background-color: #D9D9D9;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
@@ -55,8 +58,7 @@ body {
     padding: 0 1rem;
     font-size: 1rem;
     font-weight: 500;
-    background-color: rgba(255, 255, 255, 0.45);
-    backdrop-filter: blur(10px);
+    background-color: #D9D9D9;
     color: black;
     flex: 1;
 }
@@ -74,6 +76,30 @@ body {
 
 .search-bar button:hover {
     background-color: rgba(255, 255, 255, 0.24);
+}
+
+/* Search results */
+
+div.cityGuesses {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: black 0 0 5px;
+}
+
+div.cityGuess {
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+div.cityGuess:last-child {
+    border-radius: 0 0 8px 8px;
+}
+
+div.cityGuess:hover {
+    background-color: #B4B3B3;
+    padding-left: 1rem;
 }
 
 /* City name style */
