--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,10 @@ body {
     background-color: rgba(255, 255, 255, 0.24);
 }
 
+.search-bar button:hover img {
+    transform: rotate(90deg);
+}
+
 /* Search results */
 
 @keyframes appear {
