--- a/style/style.css
+++ b/style/style.css
@@ -154,8 +154,10 @@ div#search-settings.hidden {
     background-color: rgb(246, 246, 246);
     border-radius: 8px;
     padding: 1rem;
-    width: 50%;
-    height: 50%;
+    max-width: 450px;
+    width: 90%;
+    max-height: 350px;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -168,6 +170,7 @@ div#search-settings.hidden {
     flex-wrap: nowrap;
     align-items: center;
     width: 100%;
+    font-size: 1rem;
 }
 
 .setting label {
@@ -178,8 +181,8 @@ div#search-settings.hidden {
     border-radius: 8px;
     border: none;
     background-color: #B4B3B3;
-    font-size: 1rem;
-    padding: 1rem;
+    font-size: 1.25rem;
+    padding: 0.75rem;
     cursor: pointer;
 }
 
