--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 /* Fonts importation */
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 /* General styles */
 
 * {
@@ -10,7 +12,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     height: 100vh;
     width: 100vw;
     background-image: url("../assets/img/cities/default.jpg");
