--- a/style/style.css
+++ b/style/style.css
@@ -128,11 +128,11 @@ div.cityGuess:hover {
     justify-content: center;
     flex-wrap: nowrap;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20px);
     z-index: 3;
@@ -148,7 +148,7 @@ div.cityGuess:hover {
     }
 }
 
-div#search-settings.hidden {
+div#search-settings.hidden/*, div.content.hidden*/ {
     display: none;
 }
 
