--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ div.cityGuess:hover {
 
 /* Search settings */
 
-#search-settings {
+#search-settings, #infoMessageContainer {
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
@@ -283,4 +283,49 @@ div.daily-card table, div.currentWeather table {
 
 div.currentWeather table {
     border-spacing: 1rem;
+}
+
+/* Message display style */
+
+div#infoMessageContainer.hidden {
+    display: none;
+}
+
+div#infoMessageContainer div.message {
+    background-color: rgb(246, 246, 246);
+    border-radius: 8px;
+    padding: 1rem;
+    max-width: 450px;
+    width: 90%;
+}
+
+div.message {
+    text-align: center;
+}
+
+div.message *:not(:first-child) {
+    margin-top: 0.75rem;
+}
+
+div.message h3 {
+    text-align: left;
+}
+
+div.message p {
+    text-align: justify;
+}
+
+div.message button {
+    border-radius: 8px;
+    border: none;
+    background-color: #B4B3B3;
+    font-size: 1rem;
+    padding: 0.5rem;
+    cursor: pointer;
+    margin: auto;
+}
+
+div.message button:hover {
+    background-color: #cccccc;
+    transform: translateY(3px);
 }
