--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,8 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     width: 100%;
     background-image: url("../assets/img/cities/default.jpg");
     background-position: center;
