--- a/style/style.css
+++ b/style/style.css
@@ -255,7 +255,7 @@ div.currentWeather img {
 }
 
 div.hourly-forecast div.card {
-    background-image: url("../assets/img/hourly_forecast_placeholder.png");
+    /* background-image: url("../assets/img/hourly_forecast_placeholder.png"); */
     background-position: center;
     background-size: cover;
     width: 400px;
