--- a/style/style.css
+++ b/style/style.css
@@ -364,3 +364,22 @@ img.loading-icon-active {
     height: 50px;
     margin-top: 4rem;
 }
+
+/* Responsive */
+
+@media screen and (max-width: 600px) {
+
+    body {
+        padding: 1rem;
+    }
+
+    #container {
+        min-height: 75px;
+        width: 100%;
+        padding: 1rem;
+    }
+
+    #search-container {
+        width: calc(100% - 2rem);
+    }
+}
