--- a/style/style.css
+++ b/style/style.css
@@ -327,7 +327,7 @@ div.pack.hourly-forecast .card #tCurve {
     left: 0px;
     top: 0px;
     height: 100%;
-    background-color: #f00a;
+    background: linear-gradient(0deg, rgba(34,195,168,0) 0%, rgba(70,162,140,0) 5%, rgba(220,25,25,0.5) 30%, rgba(220,25,25,1) 100%);
 }
 
 /* Message display style */
