feat: temperature on curve

--- a/style/style.css
+++ b/style/style.css
@@ -323,6 +323,11 @@ div.pack.hourly-forecast .card .time
 	bottom: 2px;
 }
 
+div.pack.hourly-forecast .card .temperature
+{
+	color: #fff;
+}
+
 div.pack.hourly-forecast .card #tCurve {
     left: 0px;
     top: 0px;
