--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body {
     height: 100%;
     min-height: 100vh;
     width: 100%;
-    background-image: url("../assets/img/cities/default.jpg");
+    background-image: url("../assets/img/background.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
